--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 .flex-container {
                     display: flex;
                     flex-direction: row;
-                    padding: 15px;
+                    margin-top: 30px;
                     justify-content: space-between;
                 }
 
                 .flex-item {
                     text-align: justify;
                     width: 48%;
-                    padding: 15px;
+                    /* padding: 15px; */
                 }
 
                 .result {
@@ -46,19 +46,174 @@
                     background: lightskyblue;
                 }
 
-                form>table>tr>td {
+                form>table>tr>td,
+                h4 {
                     text-align: center;
+                }
+
+                h3 {
+                    margin-top: 30px;
+                }
+
+                .example_sent {
+                    font-style: italic;
+                    color: #808080;
                 }
             </style>
             <div style="text-align: center; margin:30px auto 30px auto">
+                <div style="text-align: left;">
+                    <div>
+                        <h3>Background</h3>
+                        There are two articles about the same event of each case, called "recalled story", and "retold
+                        story".<br />
+                        <div style="display: flex;">
+                            <div style="flex: none;">• recalled&nbsp;:&nbsp;</div>
+                            <div>A memorable or salient story that the author experienced in the past 6
+                                months.
+                            </div>
+                        </div>
+                        <div style="display: flex;">
+                            <div style="flex: none;">• retold&nbsp;:&nbsp;</div>
+                            <div>After 2–3 months, we asked the authors to re-tell the events, providing them with the
+                                summary of
+                                their story as a prompt.</div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Steps</h3>
+                        There are two steps in this lebeling work:
+                        <div style="display: flex;">
+                            <div style="flex: none;">1. Label the spans&nbsp;:&nbsp;</div>
+                            <div>Select the spans in recalled and retold story, which are related to the event of the
+                                summary.
+                                <h5>WHAT is events?</h5>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">1.&nbsp;</div>
+                                    <div>Something exactly happened
+                                        <div>EX: <span class="example_sent">I went to Salt Lake City on business with
+                                                Mr. Wang.</span></div>
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">2.&nbsp;</div>
+                                    <div>The sentences which express someone's thoughts or feelings implies that
+                                        something happened, otherwise, don't select the span.
+                                        <div>EX: <span class="example_sent">These cookies taste delicious.</span> ->
+                                            Imply that the author ate the
+                                            cookies.</div>
+                                        <div>EX: <span class="example_sent">I like Chinese food</span> -> Not imply any
+                                            event so that <span style="color: red;">don't</span> select these
+                                            spans.</div>
+                                        <div>EX: <span class="example_sent">I’m tired of going to school.</span> -> Not
+                                            imply any event so that <span style="color: red;">don't</span> select
+                                            these spans.</div>
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">3.&nbsp;</div>
+                                    <div>About someone's experience or information.
+                                        <div>EX: <span class="example_sent">I skipped fourth grade.</span></div>
+                                        <div>EX: <span class="example_sent">I live in Taiwan.</span></div>
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">4.&nbsp;</div>
+                                    <div>Someone's habbit.
+                                        <div>EX: <span class="example_sent">I usually look at English language websites
+                                                every day and go to my
+                                                local English Corner twice a week.</span></div>
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">5.&nbsp;</div>
+                                    <div>It doesn't imply anything but relate to the event of the storys.
+                                        <div>EX: (Summary: Me and my girlfriend went to the zoo on a hot day. We saw
+                                            many animals like giraffes, gorillas, elephants, snakes,
+                                            tigers, lions etc..)<br />
+                                            <span class="example_sent">It was a pretty hot day that day considering it
+                                                was the middle of July.</span>-> It relates to the event.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">7.&nbsp;</div>
+                                    <div>In most cases, the below patterns are <span style="color: red;">illegal</span>.
+                                        <div>
+                                            <span class="example_sent">
+                                                I feel...<br>
+                                                I like...<br>
+                                                I think...<br>
+                                                I remember...<br>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div style="display: flex;">
+                            <div style="flex: none;">2. Tag the spans&nbsp;:&nbsp;</div>
+                            <div>Tag the spans with three types, "Match", "Conflict" and "Add".
+                                <div style="display: flex;">
+                                    <div style="flex: none;">Match&nbsp;:&nbsp;</div>
+                                    <div>The spans from both recalled story and retold story describe the same thing,
+                                        and there are no conflicts between each other.<br>
+                                        <span style="color: red;">Notice</span>: No matter which span describe in better
+                                        detail, we only concern that the spans are describing the same event.
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">Conflict&nbsp;:&nbsp;</div>
+                                    <div>In contrast to the "Match", The spans from both recalled story and retold story
+                                        describe the same thing,
+                                        ,but there are conflicts between each other.<br>
+                                    </div>
+                                </div>
+                                <div style="display: flex;">
+                                    <div style="flex: none;">Added&nbsp;:&nbsp;</div>
+                                    <div>If the event only appeared in the retold story, please tag the spans with
+                                        "Added".
+                                    </div>
+                                </div>
+                                <div>
+                                    PS:
+                                    <div style="display: flex;">
+
+                                        <div style="flex: none;">1&nbsp;.&nbsp;</div>
+                                        <div>Each group may contain one, two or more span ids.</div>
+                                    </div>
+                                    <div style="display: flex;">
+                                        <div style="flex: none;">2&nbsp;.&nbsp;</div>
+                                        <div>One span may be tag to multiple group, ex: A match with B, but A conflict
+                                            with C</div>
+                                    </div>
+                                    <div style="display: flex;">
+                                        <div style="flex: none;">3&nbsp;.&nbsp;</div>
+                                        <div>All labeled span of retold story should be tagged</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div style="text-align: justify;">
+                    <h4 style="text-align: center;">Summary</h4>
+                    Me and my girlfriend went to the zoo on a hot day. We saw
+                    many animals like giraffes, gorillas, elephants, snakes,
+                    tigers, lions etc..
+                </div>
                 <div class="flex-container">
                     <div class="flex-item">
-                        <div id='recalled' data-text="About a month ago me and my girlfriend went to the zoo. It was an unexpected trip we just decided to go on a random Wednesday. It was a pretty hot day that day considering it was the middle of July. As soon as we got in, we saw that there were some seals to the left of the entrance so we saw them for a few minutes. Then we went to the insect section of the zoo. There were so many of them like spiders, scorpions, also bigger animals like cobras, rattlesnakes stuff like that. Then we saw the elephants. It was pretty interesting because they were in an area that looked like a jungle and off in the distance we heard gorillas grunting. So we walked around until we found the gorillas and around there we also saw other kinds of primates like chimpanzees. We walked around a bit more and we stumbled upon all the other African animals like tigers, lions, giraffes etc. It was actually pretty cool to see the giraffes because one of them got really close to me. Along the way we saw a lot of different kinds of birds and small animals. We passed by the koalas and other Australian animals like Tasmanian devils, and kangaroos. I would have enjoyed it more though if we had gone on another day. It was really hot that day and we didn't really prepare for it. But I really enjoyed going there and we'll probably go again soon.">
+                        <h4>Recalled story</h4>
+                        <div id='recalled'
+                            data-text="About a month ago me and my girlfriend went to the zoo. It was an unexpected trip we just decided to go on a random Wednesday. It was a pretty hot day that day considering it was the middle of July. As soon as we got in, we saw that there were some seals to the left of the entrance so we saw them for a few minutes. Then we went to the insect section of the zoo. There were so many of them like spiders, scorpions, also bigger animals like cobras, rattlesnakes stuff like that. Then we saw the elephants. It was pretty interesting because they were in an area that looked like a jungle and off in the distance we heard gorillas grunting. So we walked around until we found the gorillas and around there we also saw other kinds of primates like chimpanzees. We walked around a bit more and we stumbled upon all the other African animals like tigers, lions, giraffes etc. It was actually pretty cool to see the giraffes because one of them got really close to me. Along the way we saw a lot of different kinds of birds and small animals. We passed by the koalas and other Australian animals like Tasmanian devils, and kangaroos. I would have enjoyed it more though if we had gone on another day. It was really hot that day and we didn't really prepare for it. But I really enjoyed going there and we'll probably go again soon.">
                         </div>
                         <div id='recalled_result' class='result'></div>
                     </div>
                     <div class="flex-item">
-                        <div id='retold' data-text="Me and my girlfriend had gone to the Los Angeles Zoo. I can't exactly remember the day but I believe it was either April or May or maybe June. It was a hot day that day and it was spur of the moment trip. I honestly wasn't particularly excited to go but my girlfriend had been bugging me for months to go to the zoo so I finally said let's go. We got there around 10 or 11 in the morning and it was already around 90 degrees. When we walked in there was the insect/reptile section of the zoo so we saw many exotic looking spiders, snakes, scorpions etc. I liked it but my girlfriend didn't like insects. Then we walked in the African animals section. We saw elephants mostly and we could hear monkeys and apes in the distance somewhere. So we keep walking and eventually we find the apes. We saw gorillas hanging out in the shade and in a different section we saw other chimps and monkeys. We walked past that and we saw giraffes. Watching the giraffes was a cool site because they got really close to us. Like one of them was looking at me and came in my direction and I thought it would actually do something to me. Then after we saw the lions and they were mostly hanging out in the shade to stay out of the heat. We continued to walk around and we saw a section with Australian animals. So we managed to see koalas in the tress and tasmanian devils. I think we also saw kangaroos but I can't remember. We spent a lot of time at the zoo maybe around 5-6 hours. I think we left and we got back home around 4 or 5 pm.">
+                        <h4>Retold story</h4>
+                        <div id='retold'
+                            data-text="Me and my girlfriend had gone to the Los Angeles Zoo. I can't exactly remember the day but I believe it was either April or May or maybe June. It was a hot day that day and it was spur of the moment trip. I honestly wasn't particularly excited to go but my girlfriend had been bugging me for months to go to the zoo so I finally said let's go. We got there around 10 or 11 in the morning and it was already around 90 degrees. When we walked in there was the insect/reptile section of the zoo so we saw many exotic looking spiders, snakes, scorpions etc. I liked it but my girlfriend didn't like insects. Then we walked in the African animals section. We saw elephants mostly and we could hear monkeys and apes in the distance somewhere. So we keep walking and eventually we find the apes. We saw gorillas hanging out in the shade and in a different section we saw other chimps and monkeys. We walked past that and we saw giraffes. Watching the giraffes was a cool site because they got really close to us. Like one of them was looking at me and came in my direction and I thought it would actually do something to me. Then after we saw the lions and they were mostly hanging out in the shade to stay out of the heat. We continued to walk around and we saw a section with Australian animals. So we managed to see koalas in the tress and tasmanian devils. I think we also saw kangaroos but I can't remember. We spent a lot of time at the zoo maybe around 5-6 hours. I think we left and we got back home around 4 or 5 pm.">
                         </div>
                         <div id='retold_result' class='result'></div>
                     </div>
