add opinion field

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 .flex-item {
                     text-align: justify;
                     width: 48%;
-                    /* padding: 15px; */
                 }
 
                 .result {
@@ -237,6 +236,8 @@
             <crowd-form>
                 <crowd-text-area id="final_record" name="record" rows="4" style="display: none;"></crowd-text-area>
                 <crowd-text-area id="final_group" name="group" rows="4" style="display: none;"></crowd-text-area>
+                <label>Opinion</label>
+                <crowd-text-area id="opinion" name="opinion" placeholder='There are something strange in the articles, ex: two article are totally different. '></crowd-text-area>
             </crowd-form>
         </div>
     </div>
