fix encoding error

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
 </head>
 
 <body>
@@ -73,9 +74,8 @@
                         </div>
                         <div style="display: flex;">
                             <div style="flex: none;">• retold&nbsp;:&nbsp;</div>
-                            <div>After 2–3 months, we asked the authors to re-tell the events, providing them with the
-                                summary of
-                                their story as a prompt.</div>
+                            <div>After 2-3 months, we asked the authors to re-tell the events, providingthem with the
+                                summary of their story as a prompt.</div>
                         </div>
                     </div>
                     <div>
@@ -237,7 +237,9 @@
                 <crowd-text-area id="final_record" name="record" rows="4" style="display: none;"></crowd-text-area>
                 <crowd-text-area id="final_group" name="group" rows="4" style="display: none;"></crowd-text-area>
                 <label>Opinion</label>
-                <crowd-text-area id="opinion" name="opinion" placeholder='There are something strange in the articles, ex: two article are totally different. '></crowd-text-area>
+                <crowd-text-area id="opinion" name="opinion"
+                    placeholder='There are something strange in the articles, ex: two article are totally different. '>
+                </crowd-text-area>
             </crowd-form>
         </div>
     </div>
