add example image

--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                                         <div>All labeled span of retold story should be tagged</div>
                                     </div>
                                 </div>
+                                Example result:
+                                <img src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@latest/example.png" width="100%"
+                                    style="border: 5px red solid;">
                             </div>
                         </div>
                     </div>
@@ -234,8 +237,10 @@
                 </div>
             </div>
             <crowd-form>
-                <crowd-text-area id="final_record" name="record" rows="4" style="display: none;"></crowd-text-area>
-                <crowd-text-area id="final_group" name="group" rows="4" style="display: none;"></crowd-text-area>
+                <crowd-text-area id="final_record" name="record" rows="4" style="display: none;">
+                </crowd-text-area>
+                <crowd-text-area id="final_group" name="group" rows="4" style="display: none;">
+                </crowd-text-area>
                 <label>Opinion</label>
                 <crowd-text-area id="opinion" name="opinion"
                     placeholder='There are something strange in the articles, ex: two article are totally different. '>
