--- a/index.html
+++ b/index.html
@@ -61,142 +61,7 @@
                 }
             </style>
             <div style="text-align: center; margin:30px auto 30px auto">
-                <div style="text-align: left;">
-                    <div>
-                        <h3>Background</h3>
-                        There are two articles about the same event of each case, called "recalled story", and "retold
-                        story".<br />
-                        <div style="display: flex;">
-                            <div style="flex: none;">• recalled&nbsp;:&nbsp;</div>
-                            <div>A memorable or salient story that the author experienced in the past 6
-                                months.
-                            </div>
-                        </div>
-                        <div style="display: flex;">
-                            <div style="flex: none;">• retold&nbsp;:&nbsp;</div>
-                            <div>After 2-3 months, we asked the authors to re-tell the events, providingthem with the
-                                summary of their story as a prompt.</div>
-                        </div>
-                    </div>
-                    <div>
-                        <h3>Steps</h3>
-                        There are two steps in this lebeling work:
-                        <div style="display: flex;">
-                            <div style="flex: none;">1. Label the spans&nbsp;:&nbsp;</div>
-                            <div>Select the spans in recalled and retold story, which are related to the event of the
-                                summary.
-                                <h5>WHAT is events?</h5>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">1.&nbsp;</div>
-                                    <div>Something exactly happened
-                                        <div>EX: <span class="example_sent">I went to Salt Lake City on business with
-                                                Mr. Wang.</span></div>
-                                    </div>
-                                </div>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">2.&nbsp;</div>
-                                    <div>The sentences which express someone's thoughts or feelings implies that
-                                        something happened, otherwise, don't select the span.
-                                        <div>EX: <span class="example_sent">These cookies taste delicious.</span> ->
-                                            Imply that the author ate the
-                                            cookies.</div>
-                                        <div>EX: <span class="example_sent">I like Chinese food</span> -> Not imply any
-                                            event so that <span style="color: red;">don't</span> select these
-                                            spans.</div>
-                                        <div>EX: <span class="example_sent">I’m tired of going to school.</span> -> Not
-                                            imply any event so that <span style="color: red;">don't</span> select
-                                            these spans.</div>
-                                    </div>
-                                </div>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">3.&nbsp;</div>
-                                    <div>About someone's experience or information.
-                                        <div>EX: <span class="example_sent">I skipped fourth grade.</span></div>
-                                        <div>EX: <span class="example_sent">I live in Taiwan.</span></div>
-                                    </div>
-                                </div>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">4.&nbsp;</div>
-                                    <div>Someone's habbit.
-                                        <div>EX: <span class="example_sent">I usually look at English language websites
-                                                every day and go to my
-                                                local English Corner twice a week.</span></div>
-                                    </div>
-                                </div>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">5.&nbsp;</div>
-                                    <div>It doesn't imply anything but relate to the event of the storys.
-                                        <div>EX: (Summary: Me and my girlfriend went to the zoo on a hot day. We saw
-                                            many animals like giraffes, gorillas, elephants, snakes,
-                                            tigers, lions etc..)<br />
-                                            <span class="example_sent">It was a pretty hot day that day considering it
-                                                was the middle of July.</span>-> It relates to the event.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">7.&nbsp;</div>
-                                    <div>In most cases, the below patterns are <span style="color: red;">illegal</span>.
-                                        <div>
-                                            <span class="example_sent">
-                                                I feel...<br>
-                                                I like...<br>
-                                                I think...<br>
-                                                I remember...<br>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div style="display: flex;">
-                            <div style="flex: none;">2. Tag the spans&nbsp;:&nbsp;</div>
-                            <div>Tag the spans with three types, "Match", "Conflict" and "Add".
-                                <div style="display: flex;">
-                                    <div style="flex: none;">Match&nbsp;:&nbsp;</div>
-                                    <div>The spans from both recalled story and retold story describe the same thing,
-                                        and there are no conflicts between each other.<br>
-                                        <span style="color: red;">Notice</span>: No matter which span describe in better
-                                        detail, we only concern that the spans are describing the same event.
-                                    </div>
-                                </div>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">Conflict&nbsp;:&nbsp;</div>
-                                    <div>In contrast to the "Match", The spans from both recalled story and retold story
-                                        describe the same thing,
-                                        ,but there are conflicts between each other.<br>
-                                    </div>
-                                </div>
-                                <div style="display: flex;">
-                                    <div style="flex: none;">Added&nbsp;:&nbsp;</div>
-                                    <div>If the event only appeared in the retold story, please tag the spans with
-                                        "Added".
-                                    </div>
-                                </div>
-                                <div>
-                                    PS:
-                                    <div style="display: flex;">
-
-                                        <div style="flex: none;">1&nbsp;.&nbsp;</div>
-                                        <div>Each group may contain one, two or more span ids.</div>
-                                    </div>
-                                    <div style="display: flex;">
-                                        <div style="flex: none;">2&nbsp;.&nbsp;</div>
-                                        <div>One span may be tag to multiple group, ex: A match with B, but A conflict
-                                            with C</div>
-                                    </div>
-                                    <div style="display: flex;">
-                                        <div style="flex: none;">3&nbsp;.&nbsp;</div>
-                                        <div>All labeled span of retold story should be tagged</div>
-                                    </div>
-                                </div>
-                                Example result:
-                                <img src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@latest/example.png" width="100%"
-                                    style="border: 5px red solid;">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <a href="https://coyoteleo.github.io/mturk/instruction.html" class="button">View Instructions</a>
                 <hr>
                 <div style="text-align: justify;">
                     <h4 style="text-align: center;">Summary</h4>
