--- a/index.html
+++ b/index.html
@@ -61,56 +61,61 @@
                 }
             </style>
             <div style="text-align: center; margin:30px auto 30px auto">
-                <a href="https://coyoteleo.github.io/mturk/instruction.html" class="button">View Instructions</a>
+                <a href="https://coyoteleo.github.io/mturk/instruction.html" class="btn btn-primary" target="_blank"
+                    onclick="document.querySelector('#main').style.display='block'">View
+                    instructions before labeling</a>
                 <hr>
-                <div style="text-align: justify;">
-                    <h4 style="text-align: center;">Summary</h4>
-                    Me and my girlfriend went to the zoo on a hot day. We saw
-                    many animals like giraffes, gorillas, elephants, snakes,
-                    tigers, lions etc..
-                </div>
-                <div class="flex-container">
-                    <div class="flex-item">
-                        <h4>Recalled story</h4>
-                        <div id='recalled'
-                            data-text="About a month ago me and my girlfriend went to the zoo. It was an unexpected trip we just decided to go on a random Wednesday. It was a pretty hot day that day considering it was the middle of July. As soon as we got in, we saw that there were some seals to the left of the entrance so we saw them for a few minutes. Then we went to the insect section of the zoo. There were so many of them like spiders, scorpions, also bigger animals like cobras, rattlesnakes stuff like that. Then we saw the elephants. It was pretty interesting because they were in an area that looked like a jungle and off in the distance we heard gorillas grunting. So we walked around until we found the gorillas and around there we also saw other kinds of primates like chimpanzees. We walked around a bit more and we stumbled upon all the other African animals like tigers, lions, giraffes etc. It was actually pretty cool to see the giraffes because one of them got really close to me. Along the way we saw a lot of different kinds of birds and small animals. We passed by the koalas and other Australian animals like Tasmanian devils, and kangaroos. I would have enjoyed it more though if we had gone on another day. It was really hot that day and we didn't really prepare for it. But I really enjoyed going there and we'll probably go again soon.">
-                        </div>
-                        <div id='recalled_result' class='result'></div>
+                <div id="main" style="display: none;">
+                    <div style="text-align: justify;">
+                        <h4 style="text-align: center;">Summary</h4>
+                        Me and my girlfriend went to the zoo on a hot day. We saw
+                        many animals like giraffes, gorillas, elephants, snakes,
+                        tigers, lions etc..
                     </div>
-                    <div class="flex-item">
-                        <h4>Retold story</h4>
-                        <div id='retold'
-                            data-text="Me and my girlfriend had gone to the Los Angeles Zoo. I can't exactly remember the day but I believe it was either April or May or maybe June. It was a hot day that day and it was spur of the moment trip. I honestly wasn't particularly excited to go but my girlfriend had been bugging me for months to go to the zoo so I finally said let's go. We got there around 10 or 11 in the morning and it was already around 90 degrees. When we walked in there was the insect/reptile section of the zoo so we saw many exotic looking spiders, snakes, scorpions etc. I liked it but my girlfriend didn't like insects. Then we walked in the African animals section. We saw elephants mostly and we could hear monkeys and apes in the distance somewhere. So we keep walking and eventually we find the apes. We saw gorillas hanging out in the shade and in a different section we saw other chimps and monkeys. We walked past that and we saw giraffes. Watching the giraffes was a cool site because they got really close to us. Like one of them was looking at me and came in my direction and I thought it would actually do something to me. Then after we saw the lions and they were mostly hanging out in the shade to stay out of the heat. We continued to walk around and we saw a section with Australian animals. So we managed to see koalas in the tress and tasmanian devils. I think we also saw kangaroos but I can't remember. We spent a lot of time at the zoo maybe around 5-6 hours. I think we left and we got back home around 4 or 5 pm.">
+                    <div class="flex-container">
+                        <div class="flex-item">
+                            <h4>Recalled story</h4>
+                            <div id='recalled'
+                                data-text="About a month ago me and my girlfriend went to the zoo. It was an unexpected trip we just decided to go on a random Wednesday. It was a pretty hot day that day considering it was the middle of July. As soon as we got in, we saw that there were some seals to the left of the entrance so we saw them for a few minutes. Then we went to the insect section of the zoo. There were so many of them like spiders, scorpions, also bigger animals like cobras, rattlesnakes stuff like that. Then we saw the elephants. It was pretty interesting because they were in an area that looked like a jungle and off in the distance we heard gorillas grunting. So we walked around until we found the gorillas and around there we also saw other kinds of primates like chimpanzees. We walked around a bit more and we stumbled upon all the other African animals like tigers, lions, giraffes etc. It was actually pretty cool to see the giraffes because one of them got really close to me. Along the way we saw a lot of different kinds of birds and small animals. We passed by the koalas and other Australian animals like Tasmanian devils, and kangaroos. I would have enjoyed it more though if we had gone on another day. It was really hot that day and we didn't really prepare for it. But I really enjoyed going there and we'll probably go again soon.">
+                            </div>
+                            <div id='recalled_result' class='result'></div>
                         </div>
-                        <div id='retold_result' class='result'></div>
+                        <div class="flex-item">
+                            <h4>Retold story</h4>
+                            <div id='retold'
+                                data-text="Me and my girlfriend had gone to the Los Angeles Zoo. I can't exactly remember the day but I believe it was either April or May or maybe June. It was a hot day that day and it was spur of the moment trip. I honestly wasn't particularly excited to go but my girlfriend had been bugging me for months to go to the zoo so I finally said let's go. We got there around 10 or 11 in the morning and it was already around 90 degrees. When we walked in there was the insect/reptile section of the zoo so we saw many exotic looking spiders, snakes, scorpions etc. I liked it but my girlfriend didn't like insects. Then we walked in the African animals section. We saw elephants mostly and we could hear monkeys and apes in the distance somewhere. So we keep walking and eventually we find the apes. We saw gorillas hanging out in the shade and in a different section we saw other chimps and monkeys. We walked past that and we saw giraffes. Watching the giraffes was a cool site because they got really close to us. Like one of them was looking at me and came in my direction and I thought it would actually do something to me. Then after we saw the lions and they were mostly hanging out in the shade to stay out of the heat. We continued to walk around and we saw a section with Australian animals. So we managed to see koalas in the tress and tasmanian devils. I think we also saw kangaroos but I can't remember. We spent a lot of time at the zoo maybe around 5-6 hours. I think we left and we got back home around 4 or 5 pm.">
+                            </div>
+                            <div id='retold_result' class='result'></div>
+                        </div>
                     </div>
-                </div>
-                <hr>
-                <div id='pair_form' novalidate style="width: 80%;margin: auto;">
-                    <table class='table' id='group_table'>
-                        <thead>
-                            <tr>
-                                <th scope="col" style="width: 140px;">
-                                    <button class="btn btn-sm btn-success" onclick="add_group()" type="button">Add new
-                                        group</button>
-                                </th>
-                                <th scope="col" style="width: 150px;">Type</th>
-                                <th scope="col">IDs</th>
-                                <th scope="col" style="width: 60px;">Delete</th>
-                            </tr>
-                    </table>
+                    <hr>
+                    <div id='pair_form' novalidate style="width: 80%;margin: auto;">
+                        <table class='table' id='group_table'>
+                            <thead>
+                                <tr>
+                                    <th scope="col" style="width: 140px;">
+                                        <button class="btn btn-sm btn-success" onclick="add_group()" type="button">Add
+                                            new group</button>
+                                    </th>
+                                    <th scope="col" style="width: 150px;">Type</th>
+                                    <th scope="col">IDs</th>
+                                    <th scope="col" style="width: 60px;">Delete</th>
+                                </tr>
+                        </table>
+                    </div>
+
+                    <crowd-form>
+                        <crowd-text-area id="final_record" name="record" rows="4" style="display: none;">
+                        </crowd-text-area>
+                        <crowd-text-area id="final_group" name="group" rows="4" style="display: none;">
+                        </crowd-text-area>
+                        <label>Opinion</label>
+                        <crowd-text-area id="opinion" name="opinion"
+                            placeholder='There are something strange in the articles, ex: two article are totally different. '>
+                        </crowd-text-area>
+                    </crowd-form>
                 </div>
             </div>
-            <crowd-form>
-                <crowd-text-area id="final_record" name="record" rows="4" style="display: none;">
-                </crowd-text-area>
-                <crowd-text-area id="final_group" name="group" rows="4" style="display: none;">
-                </crowd-text-area>
-                <label>Opinion</label>
-                <crowd-text-area id="opinion" name="opinion"
-                    placeholder='There are something strange in the articles, ex: two article are totally different. '>
-                </crowd-text-area>
-            </crowd-form>
         </div>
     </div>
 </body>
