--- a/instruction.html
+++ b/instruction.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <title>Labeling Instructions</title>
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow">
+    <meta http-equiv="Pragma" content="no-cache">
     <meta charset="utf-8">
 </head>
 
