--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
                 crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@latest/group.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@latest/span_label.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.3/group.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.3/span_label.min.js"></script>
             <!-- <script src="group.js"></script> -->
             <!-- <script src="span_label.js"></script> -->
             <style>
