--- a/instruction.html
+++ b/instruction.html
@@ -209,7 +209,7 @@
                                 </div>
                             </div>
                             Example result:
-                            <img src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@latest/example.png" width="100%"
+                            <img src="https://cdn.jsdelivr.net/gh/CoyoteLeo/mturk@v0.5/example.png" width="100%"
                                 style="border: 5px red solid;">
                         </div>
                     </div>
